# mdc-data-cleanup

./: .gitignore  README.md  explore.ipynb  pyproject.toml
data/: combined.csv
notebooks/: cavity_analysis.ipynb  explore.ipynb  med_analysis.html  med_analysis.ipynb  medfair_summary.ipynb
src/: analysis.py  clean.py  clean_med.py  normalize.py
tests/: test_clean.py  test_clean_med.py
