[tool.poetry]
name = "data-science-projects"
version = "0.1.0"
description = ""
authors = ["mb3ns0n <a.benson@wustl.edu>"]
readme = "README.md"
packages = [{include = "data_science_projects"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pandas = "^2.0.1"
xlrd = "^2.0.1"
openpyxl = "^3.1.2"
sklearn = "^0.0.post5"
pytest = "^7.3.1"
seaborn = "^0.12.2"
ydata-profiling = "^4.3.2"
pandoc = "^2.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"
notebook = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
